# text-region-rs

./: Cargo.toml  README.md  cpp_mser_test.cpp
benches/: mser_bench.rs  swt_bench.rs
docs/: swt-port-plan.md
examples/: detect.rs  maser_detect.rs  swt_detect.rs  timing.rs
python/: compare_swt_boxes.py  opencv_swt_detect.py
src/: error.rs  heap.rs  lib.rs  params.rs  partition.rs  types.rs
src/mser/: block_memory.rs  mod.rs  params.rs
src/mser/v1/: build_tree.rs  data.rs  extract.rs  mod.rs  process_patch.rs  recognize.rs
src/mser/v2/: build_tree.rs  data.rs  extract.rs  mod.rs  parallel.rs  process_patch.rs  recognize.rs
src/swt/: chains.rs  components.rs  geometry.rs  mod.rs  preprocess.rs  render.rs  transform.rs  types.rs  validation.rs
src/v1/: build_tree.rs  data.rs  extract.rs  mod.rs  process_patch.rs  recognize.rs
src/v2/: build_tree.rs  data.rs  extract.rs  mod.rs  parallel.rs  process_patch.rs  recognize.rs
tests/: e2e.rs  error.rs  swt.rs
