[package]
name = "text-region-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
image = "0.25"
rayon = "1.10"
thiserror = "2"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[example]]
name = "maser_detect"
path = "examples/maser_detect.rs"

[[example]]
name = "swt_detect"
path = "examples/swt_detect.rs"

[[example]]
name = "timing"
path = "examples/timing.rs"

[[bench]]
name = "mser_bench"
harness = false

[[bench]]
name = "swt_bench"
harness = false
